--- a/privacy/.env
+++ b/privacy/.env
@@ -3,8 +3,8 @@
 
 # the version of Besu Docker image to use.
 # see https://hub.docker.com/r/hyperledger/besu/tags for possible values
-BESU_VERSION=1.2.4
-ORION_VERSION=1.4.0-SNAPSHOT
+BESU_VERSION=develop
+ORION_VERSION=develop
 # BESU_PUBLIC_KEY_DIRECTORY is the path to use in containers for the mapping of the volume
 BESU_PUBLIC_KEY_DIRECTORY=/opt/besu/public-keys/
 # this coinbase address corresponds to one of the 3 dev accounts for dev network
