--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 # the version of Besu Docker image to use.
 # see https://hub.docker.com/r/hyperledger/besu/tags for possible values
-BESU_VERSION=latest
+BESU_VERSION=1.4.0-beta1-SNAPSHOT
 QUICKSTART_VERSION=$BESU_VERSION
 LOCK_FILE=.quickstart.lock
 
